--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 	<title>PDF Flipbook</title>
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+
+	<!-- turn.js specific -->
 	<script type="text/javascript" src="js/turn.min.js"></script>
 	<script type="text/javascript" src="js/turn.js"></script>
 	<script type="text/javascript" src="js/hash.js"></script>
+	<!-- PDFObject.js for rendering pdfs -->
 	<script type="text/javascript" src="js/pdfobject.js"></script>
+	<!-- My included files -->
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<script type="text/javascript" src="app.js"></script>
 
